Made Many Images Locally Hosted

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h4>Father Bill Turner</h4>
                 <h5>Sacramental Minister</h5>
             </div>
-            <div class="col-md-4"><img src="https://placeimg.com/170/200/nature" alt="Kathy Westrick" height="200" />
+            <div class="col-md-4"><img src="/img/mm.png" alt="Kathy Westrick" height="200" />
                 <h4>Kathy Westrick</h4>
                 <h5>Director of Religious Education</h5>
             </div>
@@ -90,7 +90,7 @@
                 <h4>Father John Geis</h4>
                 <h5>Sacramental Minister</h5>
             </div>
-            <div class="col-md-6"><img src="https://placeimg.com/170/200/nature" alt="Sister Dianne Kaimann" height="200" />
+            <div class="col-md-6"><img src="/img/mm.png" alt="Sister Dianne Kaimann" height="200" />
                 <h4>Sister Dianne Kaimann</h4>
                 <h5>Bookkeeper</h5>
             </div>
@@ -104,21 +104,21 @@
         <h2>Catholic Community</h2>
         <h3 id="cohort">Our Cohort</h3>
         <div class="row">
-            <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/103.jpg" alt="St. Maurice Napoleon" height="200" />
+            <div class="col-md-4"><img src="/img/st-maurice.jpg" alt="St. Maurice Napoleon" height="200" />
                 <h4>St. Maurice</h4>
                 <h5>Napoleon</h5>
                 <a href="http://stmauricechurch.org/index.html" class="btn btn-inv">
                         Visit Site
                     </a>
             </div>
-            <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/097.jpg" alt="Immaculate Conception Millhousen" height="200" />
+            <div class="col-md-4"><img src="/img/immaculate-conception.jpg" alt="Immaculate Conception Millhousen" height="200" />
                 <h4>Immaculate Conception</h4>
                 <h5>Millhousen</h5>
                 <a href="/about/mass/" class="btn btn-inv">
                         Mass Time
                     </a>
             </div>
-            <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/116C.jpg" alt="St. John the Baptist Osgood" height="200" />
+            <div class="col-md-4"><img src="/img/st-john.jpg" alt="St. John the Baptist Osgood" height="200" />
                 <h4>St. John the Baptist</h4>
                 <h5>Osgood</h5>
                 <a href="http://www.stjohncatholicchurchosgood.com/" class="btn btn-inv">
@@ -128,7 +128,7 @@
 
         </div>
         <div class="row">
-            <div class="col-md-6"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Roman_Catholic_Archdiocese_of_Indianapolis.svg" alt="ArchIndy Coat of Arms" height="200" />
+            <div class="col-md-6"><img src="/img/ArchIndy.svg" alt="ArchIndy Coat of Arms" height="200" title="By Alekjds (Own work) [CC BY 1.0 (http://creativecommons.org/licenses/by/1.0), GFDL (http://www.gnu.org/copyleft/fdl.html) or CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], via Wikimedia Commons" />
                 <h3>Archdiocese of Indianapolis</h3>
                 <a href="http://www.archindy.org/" class="btn btn-inv">
                         Visit Site
