Add Alt Attributes

--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -17,7 +17,7 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/sr-donna-prickel.jpg"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/sr-donna-prickel.jpg" alt="Sister Donna Prickel"> </div>
                         <div class="media-body">
                             <h2 class="media-heading">Sister Donna Prickel</h2>
                             <div class="job">Parish Life Coordinator</div>
@@ -30,7 +30,7 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="https://placeimg.com/170/200/nature"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Kathy Westrick"> </div>
                         <div class="media-body">
                             <h2 class="media-heading">Kathaleen Westrick</h2>
                             <div class="job">Religious Education Administrator</div>
@@ -43,7 +43,7 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/fr-bill-turner.png"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/fr-bill-turner.png" alt="Father Bill Turner"> </div>
                         <div class="media-body">
                             <h2 class="media-heading">Father William Turner</h2>
                             <div class="job">Sacramental Minister</div>
@@ -56,7 +56,7 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/fr-john-geis.png"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/fr-john-geis.png" alt="Father John Geis"> </div>
                         <div class="media-body">
                             <h2 class="media-heading">Father John Geis</h2>
                             <div class="job">Sacramental Minister</div>
@@ -69,7 +69,7 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="https://placeimg.com/170/200/nature"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Sister Dianne Kaimann"> </div>
                         <div class="media-body">
                             <h2 class="media-heading">Sister Dianne Kaimann</h2>
                             <div class="job">Bookkeeper</div>
