IFrame Valid HTML5

--- a/about/history/index.html
+++ b/about/history/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-  {{.Include "/templates/head.html"}}
+    {{.Include "/templates/head.html"}}
     <title>Parish History - Immaculate Conception Church</title>
     <meta name="description" content="Immaculate Conception Church has had a long and interesting history since it was founded in 1834.">
 </head>
 
 <body>
-   		{{.Include "/templates/header.html"}}
-        <div class="container">
-            <h1>Our History</h1>
-            <div class="google-maps">
-                <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1stSJntKvx891TASu1W_WAyBNen0qPrW1k9bQi4srF9o&font=OldStandard&lang=en&timenav_position=top&initial_zoom=2&height=650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0' style="border:0"></iframe>
-            </div>
+    {{.Include "/templates/header.html"}}
+    <div class="container">
+        <h1>Our History</h1>
+        <div class="google-maps">
+            <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1stSJntKvx891TASu1W_WAyBNen0qPrW1k9bQi4srF9o&font=OldStandard&lang=en&timenav_position=top&initial_zoom=2&height=650' allowfullscreen class="history-timeline"></iframe>
         </div>
+    </div>
     {{.Include "/templates/footer.html"}}
 </body>
 
