Fixed Contact Form

--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -43,7 +43,7 @@
                                 <textarea class="form-control" id="message" name="Message"></textarea>
                             </div>
                         </div>
-                        <input type="hidden" name="_next" value="https://eggs.flexstart.me/thanks/" />
+                        <input type="hidden" name="_next" value="https://millhousenchurch.com/about/contact/thanks/" />
                         <input type="hidden" name="_subject" value="Web Form Message" />
                         <input type="hidden" name="_format" value="plain" />
                         <input type="text" name="_gotcha" class="hide" />
