Add Alt Tag to Mission Statement Image

--- a/about/mission-statement/index.html
+++ b/about/mission-statement/index.html
@@ -22,7 +22,7 @@
                 <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
                 <li>and reaching out to share God's gifts with others</li>
             </ul>
-            <img src="/img/mission-statement.jpg" width="700" class="page-photo">
+            <img src="/img/mission-statement.jpg" width="700" class="page-photo" alt="Framed Mission Statement">
         </div>
     </div>
     {{.Include "/templates/footer.html"}}
