Gallery Location Change

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                     <div class="photo-gallery">
                         <h3>Photo Gallery</h3> <span id="random_image">
   <script type="text/javascript"
-      src="//icgallery.flexstart.me/piwigo-random-backend.php?maximages=9&size=square&target=_blank"
+      src="//gallery.millhousenchurch.com/piwigo-random-backend.php?maximages=9&size=square&target=_blank"
       async>
   </script>
                     </span>
-                        <a href="https://icgallery.flexstart.me/" class="btn btn-default">
+                        <a href="https://gallery.millhousenchurch.com/" class="btn btn-default">
                                 Visit the Gallery
                             </a>
                     </div>
