--- a/ministry-schedule/index.html
+++ b/ministry-schedule/index.html
@@ -11,8 +11,8 @@
     {{.Include "/templates/header.html"}}
     <div class="container bulletin-embed">
         <h1>Ministry Schedule</h1>
-        <object data="ministry-schedule.pdf" type="application/pdf" width="100%" height="800">
-                <p>This browser does not support PDFs. Please <a href="ministry-schedule.pdf">download the PDF</a> to view it.</p>
+        <object data="2017-06.pdf" type="application/pdf" width="100%" height="800">
+                <p>This browser does not support PDFs. Please <a href="2017-06.pdf">download the PDF</a> to view it.</p>
             </object>
     </div>
     {{.Include "/templates/footer.html"}}
