Add date to auction slide

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="item active">
                 <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>The parish auction is approaching quickly!</p>
+                        <p>The parish auction will be on August 12th!</p>
                         <a href="/events/auction/" class="btn btn-default">
                             Learn More
                         </a>
