Fix Gallery Link on Auction page

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -40,11 +40,11 @@
     <div class="stripe gray-stripe">
         <h3>Auction 2016 Photos</h3> <span id="random_image">
   <script type="text/javascript"
-      src="//icgallery.flexstart.me/piwigo-random-backend.php?maximages=6&size=2small&cat_id=3"
+      src="//millhousenchurch.com/piwigo-random-backend.php?maximages=6&size=2small&cat_id=3"
       async>
   </script>
                     </span>
-        <a href="https://icgallery.flexstart.me/index.php?/category/3">
+        <a href="https://millhousenchurch.com/index.php?/category/3">
             <button type="button" class="btn btn-default">View Full Album</button>
         </a>
     </div>
