Add correct meta description to auction

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -4,7 +4,7 @@
 <head>
     {{.Include "/templates/head.html"}}
     <title>Auction - Immaculate Conception Church</title>
-    <meta name="description" content="Educating the youth from preschool to 5th grade to help them learn, live, and grow in the Catholic faith.">
+    <meta name="description" content="The parish auction is approaching quickly and consignment reservations are being accepted now!">
 </head>
 
 <body>
