Added NCYC to carousel

--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
                 </div>
             </div>
             <div class="item">
+                <div class="img-slide4">
+                    <div class="carousel-caption">
+                        <p>Are you going?</p>
+                        <img src="/img/ncyc.png" alt="NCYC Logo">
+                        <a href="/youth-ministry/" class="btn btn-default">
+                            Learn More
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
                 <div class="img-slide1">
                     <div class="carousel-caption">
                         <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
