Changed Youth Ministry Page

--- a/youth-ministry/index.html
+++ b/youth-ministry/index.html
@@ -32,8 +32,12 @@
             <img src="/img/ncyc.png" alt="NCYC logo">
             <h2>NCYC 2017 is coming quickly!</h2>
             <iframe src="https://www.youtube.com/embed/svaDR7CJKbQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen class="ncyc-promo"></iframe>
-            <p>Registration is online this year! You must fill out the online registration form for each individual planning on attending. Then fill out the liability waiver, print and sign it, and give it to Sharon.</p> <a href="http://www.archindyym.com/ncyc" class="btn btn-default">
+            <p>Registration is online this year! You must fill out the online registration form for each individual planning on attending. Then fill out the liability waiver, print and sign it, and give it to Sharon.</p>
+            <a href="http://www.archindyym.com/ncyc" class="btn btn-default">
                 Register Now
+            </a>
+            <a href="http://www.ncyc.info/" target="_blank" class="btn btn-default">
+                Learn More
             </a>
         </div>
     </div>
