--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -32,7 +32,7 @@
                     <div class="media">
                         <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Kathy Westrick"> </div>
                         <div class="media-body">
-                            <h2 class="media-heading">Kathaleen Westrick</h2>
+                            <h2 class="media-heading">Kathleen Westrick</h2>
                             <div class="job">Religious Education Administrator</div>
                             <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
                             <div class="mail"><a href="tel:8125912433">812-591-2433</a></div>
