Add Auction Raffle Info

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -18,26 +18,77 @@
         <p>Saturday, August 12th 2017 beginning at 9:30am</p>
     </div>
 
-    <div class="stripe white-stripe">
-        <h2>Now accepting reservations of consignments!</h2>
-        <p>Contact one of the volunteers below by July 8th to get your items listed on the sale bill and other advertisements.</p>
-        <p>Brian Huff - <a href="tel:8126145159">(812) 614-5159</a></p>
-        <p>Jeff Chandler - <a href="tel:8125913812">(812) 591-3812</a></p>
-        <p>Tim Scheidler - <a href="tel:8126141742">(812) 614-1742</a></p>
-        <p>Norbert Bedel - <a href="tel:8126140198">(812) 614-0198</a></p>
+    <div class="stripe white-stripe container-fluid row">
+        <div class="col-md-6">
+            <h2>Now accepting reservations of consignments!</h2>
+            <p>Contact one of the volunteers below by July 8th to get your items listed on the sale bill and other advertisements.</p>
+            <p>Brian Huff - <a href="tel:8126145159">(812) 614-5159</a></p>
+            <p>Jeff Chandler - <a href="tel:8125913812">(812) 591-3812</a></p>
+            <p>Tim Scheidler - <a href="tel:8126141742">(812) 614-1742</a></p>
+            <p>Norbert Bedel - <a href="tel:8126140198">(812) 614-0198</a></p>
+        </div>
+        <div class="col-md-6">
+            <h2>Raffle Prizes</h2>
+            <p>Don't forget to enter the 2017 Raffle, featuring many great prizes including:</p>
+            <table>
+                <tr>
+                    <th>Donated By</th>
+                    <th>Number to Give Away</th>
+                    <th>Prize</th>
+                </tr>
+                <tr>
+                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
+                    <td>2</td>
+                    <td>Oil Changes</td>
+                </tr>
+                <tr>
+                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
+                    <td>2</td>
+                    <td>Hat, T-Shirt, and Nerf Football</td>
+                </tr>
+                <tr>
+                    <td><a href="http://wyaloosingcreek.weebly.com/">Wyaloosing Creek Golf Course</a></td>
+                    <td>1</td>
+                    <td>2 18-Hole Games with Cart</td>
+                </tr>
+                <tr>
+                    <td><a href="http://www.stonesfarmservice.com/">Stone's Farm Service</a></td>
+                    <td>1</td>
+                    <td>Wash Bucket and Lights</td>
+                </tr>
+                <tr>
+                    <td><a href="http://greensburg.hilliardfc.com/">Hilliard Lyons</a></td>
+                    <td>1</td>
+                    <td>$250 Cash</td>
+                </tr>
+                <tr>
+                    <td><a href="http://newpointstone.com/harris-city/">Harris City Stone</a></td>
+                    <td>1</td>
+                    <td>One Load of Stone</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.napoleonstatebank.com/">The Napoleon State Bank</a></td>
+                    <td>1</td>
+                    <td>4 Cincinnati Reds Tickets with Parking Pass</td>
+                </tr>
+            </table>
+            <p>New items added daily!</p>
+        </div>
+
+    </div>
+    <div class="stripe gray-stripe">
+        <a href="http://www.auctionzip.com/cgi-bin/auctionview.cgi?lid=2930218&kwd=Immaculate%2520Conception&zip=47240&category=0" class="btn btn-inv">
+                            View More on AuctionZip
+            </a>
         <div class="container">
             <h3>Full Consignment Request</h3>
             <object data="consignment-request.pdf" type="application/pdf" width="100%" height="800">
                 <p>This browser does not support PDFs. Please <a href="consignment-request.pdf">download the PDF</a> to view it.</p>
             </object></div>
-        <a href="http://www.auctionzip.com/cgi-bin/auctionview.cgi?lid=2930218&kwd=Immaculate%2520Conception&zip=47240&category=0" class="btn btn-inv">
-                            View More on AuctionZip
-                        </a>
     </div>
 
 
-
-    <div class="stripe gray-stripe">
+    <div class="stripe white-stripe">
         <h3>Auction 2016 Photos</h3> <span id="random_image">
   <script type="text/javascript"
       src="//gallery.millhousenchurch.com/piwigo-random-backend.php?maximages=6&size=2small&cat_id=3"
@@ -45,7 +96,7 @@
   </script>
                     </span>
         <a href="https://gallery.millhousenchurch.com/index.php?/category/3">
-            <button type="button" class="btn btn-default">View Full Album</button>
+            <button type="button" class="btn btn-inv">View Full Album</button>
         </a>
     </div>
 
