Add Auction Raffle Prizes

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -67,6 +67,36 @@
                     <td>One Load of Stone</td>
                 </tr>
                 <tr>
+                    <td><a href="https://www.facebook.com/parksidelanesbowling/">Parkside Lanes</a></td>
+                    <td>1</td>
+                    <td>6 Games of Mini Golf and 6 Games of Bowling</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.facebook.com/pages/Tree-City-Oil-Lube/151356268239020">Tree City Oil &amp; Lube</a></td>
+                    <td>1</td>
+                    <td>Free Oil Change</td>
+                </tr>
+                <tr>
+                    <td><a href="http://johannigmanexcavating.com/">Johannigman Excavating</a></td>
+                    <td>1</td>
+                    <td>$100</td>
+                </tr>
+                <tr>
+                    <td><a href="http://www.drvinyl.com/">Phil Niemeyer - Dr. Vinyl</a></td>
+                    <td>1</td>
+                    <td>2 Reds Tickets</td>
+                </tr>
+                <tr>
+                    <td>Millhousen Ladies Auxiliary</td>
+                    <td>1</td>
+                    <td>$50</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/reservation">Holiday Inn Express</a></td>
+                    <td>1</td>
+                    <td>Free Overnight Stay</td>
+                </tr>
+                <tr>
                     <td><a href="https://www.napoleonstatebank.com/">The Napoleon State Bank</a></td>
                     <td>1</td>
                     <td>4 Cincinnati Reds Tickets with Parking Pass</td>
