Add Raffle Prizes

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -101,6 +101,46 @@
                     <td>1</td>
                     <td>4 Cincinnati Reds Tickets with Parking Pass</td>
                 </tr>
+                <tr>
+                    <td>Jim Kunz and Kenny Tebbe - Beck's Seeds</td>
+                    <td>1</td>
+                    <td>$25</td>
+                </tr>
+		<tr>
+                    <td><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Knights of St. John Millhousen</a></td>
+                    <td>1</td>
+                    <td>$50</td>
+                </tr>
+		<tr>
+                    <td><a href="http://oldenburgfranciscans.org/">Sisters of St. Francis, Oldenburg</a></td>
+                    <td>1</td>
+                    <td>Mickey Gift Basket</td>
+                </tr>
+		<tr>
+                    <td><a href="http://www.stonesfamilyrestaurant.com/">Stone's Family Restaurant and Tavern</a></td>
+                    <td>2</td>
+                    <td>$25 Gift Certificate and T-shirt</td>
+                </tr>
+		<tr>
+                    <td><a href="https://goo.gl/maps/cDuA4tbKnfQ2">K-Fab</a></td>
+                    <td>1</td>
+                    <td>$100</td>
+                </tr>
+		<tr>
+                    <td><a href="http://www.premierag.com/">Premier Ag</a></td>
+                    <td>4</td>
+                    <td>$50 Gas Card</td>
+                </tr>
+		<tr>
+                    <td><a href="https://www.facebook.com/pages/Five-Points-Tire-Service/117413304986214">Five Points Tire Service</a></td>
+                    <td>4</td>
+                    <td>Tire Rotation and Balancing</td>
+                </tr>
+		<tr>
+                    <td>>Norb Bedel</td>
+                    <td>2</td>
+                    <td>Half Hogs with Normal Processing</td>
+                </tr>
             </table>
             <p>New items added daily!</p>
         </div>
