Add Help Wanted and Photos Wanted

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -26,6 +26,9 @@
             <p>Jeff Chandler - <a href="tel:8125913812">(812) 591-3812</a></p>
             <p>Tim Scheidler - <a href="tel:8126141742">(812) 614-1742</a></p>
             <p>Norbert Bedel - <a href="tel:8126140198">(812) 614-0198</a></p>
+        <a href="http://www.auctionzip.com/cgi-bin/auctionview.cgi?lid=2930218&kwd=Immaculate%2520Conception&zip=47240&category=0" class="btn btn-inv">
+                            View More on AuctionZip
+            </a>
         </div>
         <div class="col-md-6">
             <h2>Raffle Prizes</h2>
@@ -137,7 +140,7 @@
                     <td>Tire Rotation and Balancing</td>
                 </tr>
 		<tr>
-                    <td>>Norb Bedel</td>
+                    <td>Norb Bedel</td>
                     <td>2</td>
                     <td>Half Hogs with Normal Processing</td>
                 </tr>
@@ -147,15 +150,18 @@
 
     </div>
     <div class="stripe gray-stripe">
-        <a href="http://www.auctionzip.com/cgi-bin/auctionview.cgi?lid=2930218&kwd=Immaculate%2520Conception&zip=47240&category=0" class="btn btn-inv">
-                            View More on AuctionZip
-            </a>
-        <div class="container">
+<div class="row">
+        <div class="col-md-6">
             <h3>Full Consignment Request</h3>
             <object data="consignment-request.pdf" type="application/pdf" width="100%" height="800">
                 <p>This browser does not support PDFs. Please <a href="consignment-request.pdf">download the PDF</a> to view it.</p>
             </object></div>
-    </div>
+<div class="col-md-6">
+            <h3>Help Wanted!</h3>
+            <object data="auction-volunteer.pdf" type="application/pdf" width="100%" height="800">
+                <p>This browser does not support PDFs. Please <a href="auction-volunteer.pdf">download the PDF</a> to view it.</p>
+            </object></div>
+    </div></div>
 
 
     <div class="stripe white-stripe">
@@ -168,6 +174,9 @@
         <a href="https://gallery.millhousenchurch.com/index.php?/category/3">
             <button type="button" class="btn btn-inv">View Full Album</button>
         </a>
+
+<h3>Taking photos at the 2017 Auction?</h3>
+<p>Add them to the parish gallery! Just head to the <a href="https://gallery.millhousenchurch.com/">gallery</a>, register for an account, and upload your photos and videos!</p>
     </div>
 
     {{.Include "/templates/footer.html"}}
