--- a/youth-ministry/index.html
+++ b/youth-ministry/index.html
@@ -31,6 +31,7 @@
         <div class="ncyc-content">
             <img src="/img/ncyc.png" alt="NCYC logo">
             <h2>NCYC 2017 is coming quickly!</h2>
+            <p>Registration due July 28th! Sign up now!</p>
             <iframe src="https://www.youtube.com/embed/svaDR7CJKbQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen class="ncyc-promo"></iframe>
             <p>Registration is online this year! You must fill out the online registration form for each individual planning on attending. Then fill out the liability waiver, print and sign it, and give it to Sharon.</p>
             <a href="http://www.archindyym.com/ncyc" class="btn btn-default">
