Add Schema Organization Markup

--- a/index.html
+++ b/index.html
@@ -232,6 +232,23 @@
         });
 
     </script>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "Immaculate Conception Church, Millhousen",
+  "url": "https://millhousenchurch.com/",
+  "logo": "https://millhousenchurch.com/img/church-favicon.png",
+  "sameAs": [
+    "https://www.facebook.com/Millhousen/",
+    "https://www.instagram.com/ic_millhousen/",
+    "https://twitter.com/IC_Millhousen/",
+   "https://plus.google.com/101600092827744209060/",
+    "https://www.archindy.org/parishes/listings/097.html",
+    "https://www.yelp.com/biz/immaculate-conception-church-greensburg-2"
+    ]
+}
+</script>
 </body>
 
 </html>
