Fix Youth Ministry Image

--- a/youth-ministry/index.html
+++ b/youth-ministry/index.html
@@ -17,7 +17,7 @@
         <h3>Leader</h3>
         <div class="business-card business-card-uno">
             <div class="media">
-                <div class="media-left-uno"> <img class="media-object img-circle profile-img-uno" src="/img/mm.png" alt="Sister Dianne Kaimann"> </div>
+                <div class="media-left-uno"> <img class="media-object img-circle profile-img-uno" src="/img/mm.png" alt="Sharon Mapes"> </div>
                 <div class="media-body-uno">
                     <h2 class="media-heading-uno">Sharon Mapes</h2>
                     <div class="job-uno">Volunteer Youth Ministry Leader</div>
