Add New Raffle Prizes

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -58,7 +58,17 @@
                 <tr>
                     <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
                     <td>2</td>
-                    <td>Hat, T-Shirt, and Nerf Football</td>
+                    <td>Hats</td>
+                </tr>
+                <tr>
+                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
+                    <td>1</td>
+                    <td>T-Shirt</td>
+                </tr>
+                <tr>
+                    <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
+                    <td>1</td>
+                    <td>Nerf Football</td>
                 </tr>
                 <tr>
                     <td><a href="http://wyaloosingcreek.weebly.com/">Wyaloosing Creek Golf Course</a></td>
@@ -76,9 +86,9 @@
                     <td>$250 Cash</td>
                 </tr>
                 <tr>
-                    <td><a href="http://newpointstone.com/harris-city/">Harris City Stone</a></td>
+                    <td><a href="http://newpointstone.com/harris-city/">Harris City Stone and Bob Hardebeck</a></td>
                     <td>1</td>
-                    <td>One Load of Stone</td>
+                    <td>One Load of Stone and Trucking</td>
                 </tr>
                 <tr>
                     <td><a href="https://www.facebook.com/parksidelanesbowling/">Parkside Lanes</a></td>
@@ -105,11 +115,7 @@
                     <td>1</td>
                     <td>$50</td>
                 </tr>
-                <tr>
-                    <td><a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/reservation">Holiday Inn Express</a></td>
-                    <td>1</td>
-                    <td>Free Overnight Stay</td>
-                </tr>
+
                 <tr>
                     <td><a href="https://www.napoleonstatebank.com/">The Napoleon State Bank</a></td>
                     <td>1</td>
@@ -141,6 +147,11 @@
                     <td>$100</td>
                 </tr>
                 <tr>
+                    <td><a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/reservation">Holiday Inn Express</a></td>
+                    <td>1</td>
+                    <td>Free Overnight Stay</td>
+                </tr>
+                <tr>
                     <td><a href="http://www.premierag.com/">Premier Ag</a></td>
                     <td>4</td>
                     <td>$50 Gas Card</td>
@@ -154,6 +165,21 @@
                     <td>Norb Bedel</td>
                     <td>2</td>
                     <td>Half Hogs with Normal Processing</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.facebook.com/pages/Napolean-Meat-Locker/228490733959398">Napoleon Locker</a></td>
+                    <td>1</td>
+                    <td>$30 Certificate</td>
+                </tr>
+                <tr>
+                    <td><a href="http://www.wearlymonuments.com/locations/imported-2010-02-26/scheidler-wearly-monuments/?back=Locations">Scheidler Wearly Monuments</a></td>
+                    <td>1</td>
+                    <td>$50</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.facebook.com/HOPjimscheidler/">HOP Communications - Jim Scheidler and Mark Fry</a></td>
+                    <td>1</td>
+                    <td>$50</td>
                 </tr>
             </table>
             <p>New items added daily!</p>
