Add Raffle Prizes

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -181,6 +181,31 @@
                     <td>1</td>
                     <td>$50</td>
                 </tr>
+                <tr>
+                    <td><a href="https://www.facebook.com/Smith-Implements-Inc-190556980983936/">Smith Implements</a></td>
+                    <td>1</td>
+                    <td>Toy Semi</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.facebook.com/Smith-Implements-Inc-190556980983936/">Smith Implements</a></td>
+                    <td>1</td>
+                    <td>Youth Hat</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.facebook.com/Smith-Implements-Inc-190556980983936/">Smith Implements</a></td>
+                    <td>1</td>
+                    <td>Toy S690 Combine</td>
+                </tr>
+                <tr>
+                    <td><a href="http://lowespellets.com/">Lowe's Pellet and Grain</a></td>
+                    <td>2</td>
+                    <td>Gift Bags</td>
+                </tr>
+                <tr>
+                    <td><a href="http://walterstire.com/">Walter's Tire Service</a></td>
+                    <td>1</td>
+                    <td>Three Oil Changes</td>
+                </tr>
             </table>
             <p>New items added daily!</p>
         </div>
