Fix Smith Implements links

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -182,17 +182,17 @@
                     <td>$50</td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.facebook.com/Smith-Implements-Inc-190556980983936/">Smith Implements</a></td>
+                    <td><a href="http://www.smithimplements.com/about-us/locations/greensburgin.aspx">Smith Implements</a></td>
                     <td>1</td>
                     <td>Toy Semi</td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.facebook.com/Smith-Implements-Inc-190556980983936/">Smith Implements</a></td>
+                    <td><a href="http://www.smithimplements.com/about-us/locations/greensburgin.aspx">Smith Implements</a></td>
                     <td>1</td>
                     <td>Youth Hat</td>
                 </tr>
                 <tr>
-                    <td><a href="https://www.facebook.com/Smith-Implements-Inc-190556980983936/">Smith Implements</a></td>
+                    <td><a href="http://www.smithimplements.com/about-us/locations/greensburgin.aspx">Smith Implements</a></td>
                     <td>1</td>
                     <td>Toy S690 Combine</td>
                 </tr>
