Remove Links to Auction Page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ol>
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
-            <div class="item active">
+            <!-- <div class="item active">
                 <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>The parish auction will be on August 12th!</p>
@@ -27,8 +27,8 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="item">
+            </div> -->
+            <div class="item active">
                 <div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Join us for Mass every Sunday at 8 AM!</p>
