Add to Youth Ministry Page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="item">
                 <div class="img-slide4">
                     <div class="carousel-caption">
-                        <p>Are you going?</p>
+                        <p>Please support our trip!</p>
                         <img src="/img/ncyc.png" alt="NCYC Logo">
                         <a href="/youth-ministry/" class="btn btn-default">
                             Learn More
