--- a/youth-ministry/index.html
+++ b/youth-ministry/index.html
@@ -31,16 +31,22 @@
         <div class="ncyc-content">
             <img src="/img/ncyc.png" alt="NCYC logo">
             <h2>NCYC 2017 is coming quickly!</h2>
-            <p>Registration due July 28th! Sign up now!</p>
             <iframe src="https://www.youtube.com/embed/svaDR7CJKbQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen class="ncyc-promo"></iframe>
-            <p>Registration is online this year! You must fill out the online registration form for each individual planning on attending. Then fill out the liability waiver, print and sign it, and give it to Sharon.</p>
-            <a href="http://www.archindyym.com/ncyc" class="btn btn-default">
-                Register Now
-            </a>
+            <p>Our trip to the National Catholic Youth Conference is near! Please support us in our fundraising efforts!</p>
+		<h3>Stone's Benefit Dinner - August 20th</h3>
+		<p>Come to Stone's Family Restaurant between 4pm and 6pm to support our trip AND feed your family! The buffet style meal will include Stone's Famous Fried Chicken, mashed potatoes and gravy, slaw, potato salad and more!</p>
+		<h3>Dairy Queen Day - September 14th</h3>
+		<p>Visit us at the Westport Dairy Queen between 4pm and 9pm for a cool treat served up by your fellow parishioners!</p>
+		<h3>Aluminum Can Collection - September 17th to October 22nd</h3>
+		
             <a href="http://www.ncyc.info/" target="_blank" class="btn btn-default">
-                Learn More
+                NCYC 2017 Website
             </a>
         </div>
+    </div>
+    <div class="stripe gray-stripe">
+        <h1>Other Upcoming Youth Events</h1>
+        <p>Cincinnati Reds Game - August 27th</p>
     </div>
 
     {{.Include "/templates/footer.html"}}
